traces/bug_77.txt
/home/runner/work/42sh-infer/42sh-infer/src/config-deprecated/config.c:80: error: MEMORY_LEAK
  memory dynamically allocated by call to `strdup()` at line 80, column 22 is not reachable after line 80, column 5.
Showing all 5 steps of the trace


/home/runner/work/42sh-infer/42sh-infer/src/config-deprecated/config.c:70:1: start of procedure config_http()
68.   }
69.   
70. > int config_http(Shell *shell, t_config *config)
71.   {
72.       int port;

/home/runner/work/42sh-infer/42sh-infer/src/config-deprecated/config.c:76:5: Skipping srand(): method has no implementation
74.       char *ip;
75.   
76.       srand(getpid() * time(NULL));
          ^
77.       if ((port = init_connection(&serv)) == -1)
78.           return 1;

/home/runner/work/42sh-infer/42sh-infer/src/config-deprecated/config.c:77:9: Taking false branch
75.   
76.       srand(getpid() * time(NULL));
77.       if ((port = init_connection(&serv)) == -1)
              ^
78.           return 1;
79.       putstr("server started on http://localhost:%d/\n", port);

/home/runner/work/42sh-infer/42sh-infer/src/config-deprecated/config.c:79:5: 
77.       if ((port = init_connection(&serv)) == -1)
78.           return 1;
79. >     putstr("server started on http://localhost:%d/\n", port);
80.       ip = lstr_concat(strdup("open 'http://localhost:"), 2, LSTR_INT,
81.           (int)(port), LSTR_CHAR, '\'');

/home/runner/work/42sh-infer/42sh-infer/src/config-deprecated/config.c:80:5: Skipping lstr_concat(): empty list of specs
78.           return 1;
79.       putstr("server started on http://localhost:%d/\n", port);
80.       ip = lstr_concat(strdup("open 'http://localhost:"), 2, LSTR_INT,
          ^
81.           (int)(port), LSTR_CHAR, '\'');
82.       quick_exec(shell, ip);
